Fixed scrollbar

--- a/TheBorderlessSource.raw.css
+++ b/TheBorderlessSource.raw.css
@@ -692,6 +692,7 @@ div[class="scroller-fzNley scroller-NXV0-d scrolling-1GMXnh"] div[style*="width:
 .appMount-14L89u { background-color: #1e2124; }
 div[class="scroller-fzNley channel-members"] div[style*="width: 100%;"]:last-of-type  { height: 600px !important; }
 div[class="scroller-fzNley channel-members scrolling-1GMXnh"] div[style*="width: 100%;"]:last-of-type { height: 600px !important; }
+.scroller-fzNley::-webkit-scrollbar { width: 0px !important; height: 0 !important; }
 .attachButton-Di6YUh { margin: 0; padding: 13px 0 13px 10px; }
 .textArea-20yzAH { margin: 4px 2px 6px 0; padding: 10px 38px 0 0; }
 .popout header { border-radius: 0; background-color: #4f545c; }
